tests/invalid/anys_in_negated_contexts.err_exp
anys_in_negated_contexts.m:042: In clause for `bad_if_then_else1(ia, out)':
anys_in_negated_contexts.m:042:   purity error: if-then-else should be inside a
anys_in_negated_contexts.m:042:   promise_purity scope, because non-local
anys_in_negated_contexts.m:042:   variable [38;5;87m`X'[39;49m has inst [38;5;203m`any'[39;49m and appears in
anys_in_negated_contexts.m:042:   the condition.
anys_in_negated_contexts.m:060: In clause for `bad_negation1(ia)':
anys_in_negated_contexts.m:060:   purity error: negation should be inside a
anys_in_negated_contexts.m:060:   promise_purity scope, because non-local
anys_in_negated_contexts.m:060:   variable [38;5;87m`X'[39;49m has inst [38;5;203m`any'[39;49m and appears in
anys_in_negated_contexts.m:060:   the body.
anys_in_negated_contexts.m:083: In clause for `bad_lambda(in)':
anys_in_negated_contexts.m:083:   mode error in conjunction. The next two error
anys_in_negated_contexts.m:083:   messages indicate possible causes of this
anys_in_negated_contexts.m:083:   error.
anys_in_negated_contexts.m:083: 
anys_in_negated_contexts.m:082:   In clause for `bad_lambda(in)':
anys_in_negated_contexts.m:082:   purity error: lambda is `ground' but contains
anys_in_negated_contexts.m:082:   the following non-local variable whose inst
anys_in_negated_contexts.m:082:   contains `any': [38;5;203m`Y'.[39;49m
anys_in_negated_contexts.m:082:   Predicate expressions with inst `any' can be
anys_in_negated_contexts.m:082:   written `any_pred(Args) is det :- ...'.
anys_in_negated_contexts.m:082:   Function expressions with inst `any' can be
anys_in_negated_contexts.m:082:   written
anys_in_negated_contexts.m:082:   `any_func(Args) = Result is det :- ...'.
anys_in_negated_contexts.m:083: 
anys_in_negated_contexts.m:083:   In clause for `bad_lambda(in)':
anys_in_negated_contexts.m:083:   in the predicate term of the higher order
anys_in_negated_contexts.m:083:   call to the predicate variable `P':
anys_in_negated_contexts.m:083:   mode error: context requires a [38;5;40mpredicate of[39;49m
anys_in_negated_contexts.m:083:   [38;5;40marity one,[39;49m but [38;5;87m`P'[39;49m is a [38;5;203mfree variable.[39;49m
